SBanga: Enabled formatting, introduced checkstyle and fixes, introduced commons lang3 and smaller refactor and fixes
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C866400