@@ -1,8 +1,3 @@
-/*
- * Copyright 2012: Thomson Reuters Global Resources. All Rights Reserved.
- * Proprietary and Confidential information of TRGR. Disclosure, Use or
- * Reproduction without the written authorization of TRGR is prohibited
- */
 package com.thomsonreuters.uscl.ereader.format.service;
 
 import java.io.ByteArrayInputStream;
@@ -26,6 +21,13 @@ import javax.xml.xpath.XPathConstants;
 import javax.xml.xpath.XPathExpression;
 import javax.xml.xpath.XPathFactory;
 
+import com.thomsonreuters.uscl.ereader.core.book.domain.BookDefinition;
+import com.thomsonreuters.uscl.ereader.format.exception.EBookFormatException;
+import com.thomsonreuters.uscl.ereader.format.parsinghandler.XSLIncludeResolver;
+import com.thomsonreuters.uscl.ereader.gather.metadata.domain.DocMetadata;
+import com.thomsonreuters.uscl.ereader.gather.metadata.service.DocMetadataService;
+import com.thomsonreuters.uscl.ereader.ioutil.FileExtensionFilter;
+import com.thomsonreuters.uscl.ereader.ioutil.FileHandlingHelper;
 import org.apache.commons.io.IOUtils;
 import org.easymock.EasyMock;
 import org.junit.Before;
@@ -40,15 +42,6 @@ import org.springframework.util.Assert;
 import org.w3c.dom.Document;
 import org.w3c.dom.NodeList;
 
-import com.thomsonreuters.uscl.ereader.core.book.domain.BookDefinition;
-import com.thomsonreuters.uscl.ereader.format.exception.EBookFormatException;
-import com.thomsonreuters.uscl.ereader.format.parsinghandler.XSLIncludeResolver;
-import com.thomsonreuters.uscl.ereader.gather.metadata.domain.DocMetadata;
-import com.thomsonreuters.uscl.ereader.gather.metadata.service.DocMetadataService;
-import com.thomsonreuters.uscl.ereader.ioutil.FileExtensionFilter;
-import com.thomsonreuters.uscl.ereader.ioutil.FileHandlingHelper;
-
-
 /**
  * This class is a spike implementation of XSLT pathway which produces persistent URLs to WLN
  * via the MUD.
@@ -57,39 +50,36 @@ import com.thomsonreuters.uscl.ereader.ioutil.FileHandlingHelper;
  */
 @RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration(locations = "PersistentUrlTransformIntegrationTest-context.xml")
-public class PersistentUrlTransformIntegrationTests
+public final class PersistentUrlTransformIntegrationTests
 {
     private static final String MOCK_DOCTYPE = null;
-    private static InputStream MOCK_INPUT_STREAM ; 
+    private static InputStream MOCK_INPUT_STREAM;
     private static final String MOCK_COLLECTION = "w_codesstaminrdp";
     private static final String CODES_STATUTES_XSLT = "CodesStatutes.xsl";
     private static final String ANALYTICAL_XSLT = "AnalyticalEaganProducts.xsl";
     private static final String PRE_RENDERED_GUID = "Iff5a0c8d7c8f11da9de6e47d6d5aa7a5";
-    private static final String WEST_LAW_RENDERED_XML =
-        "Iff5a0c8d7c8f11da9de6e47d6d5aa7a5_expected_wln.html";
+    private static final String WEST_LAW_RENDERED_XML = "Iff5a0c8d7c8f11da9de6e47d6d5aa7a5_expected_wln.html";
     private static final String IMAGEBLOCK_XPATH_EXPR =
         "//div[@id='co_document']/div/div/div/div[@class='co_imageBlock']/a[@href]";
     private static final String IMAGEBLOCK_WEST_LAW_XPATH_EXPR =
         "//div[@id='co_document']/div/div/div/div/div[@class='co_imageBlock']/a[@href]";
-    private static final String DOCUMENT_HEAD_XPATH_EXPR =
-        "//div[@id='co_document']/div/div/a[@href]";
+    private static final String DOCUMENT_HEAD_XPATH_EXPR = "//div[@id='co_document']/div/div/a[@href]";
     private static final String CONTENT_BLOCK_XPATH_EXPR =
         "//div[@id='co_document']/div/div/div/div/div/div/div/div/a[@href]";
-    private static final String PRELIMGOLDENLEAF_XPATH_EXPR_3 =
-        "//div[@id='co_prelimGoldenLeaf']/a[@href]";
+    private static final String PRELIMGOLDENLEAF_XPATH_EXPR_3 = "//div[@id='co_prelimGoldenLeaf']/a[@href]";
     private static final String PARAGRAPH_TEXT_XPATH_EXPR =
         "//div[@class='co_paragraph']/div[@class='co_paragraphText']/a[@href]";
     private static final String titleId = "IMPH";
     private static final String fullTitleId = "uscl/an/IMPH";
     private static final String staticContentDir = "/apps/ebookbuilder/staticContent/";
-    TransformerServiceImpl transformerService;
-    DocMetadata mockDocMetadata;
-    DocMetadataService mockDocMetadataService;
-    GenerateDocumentDataBlockServiceImpl mocGenerateDocumentDataBlockService;
-    BookDefinition bookDefinition;
-    String novusXmlFilename;
-    String novusMetadataFilename;
-    long jobId;
+    private TransformerServiceImpl transformerService;
+    private DocMetadata mockDocMetadata;
+    private DocMetadataService mockDocMetadataService;
+    private GenerateDocumentDataBlockServiceImpl mocGenerateDocumentDataBlockService;
+    private BookDefinition bookDefinition;
+    private String novusXmlFilename;
+    private String novusMetadataFilename;
+    private long jobId;
     @Rule
     public TemporaryFolder tempDirectory = new TemporaryFolder();
 
@@ -101,15 +91,19 @@ public class PersistentUrlTransformIntegrationTests
         mocGenerateDocumentDataBlockService = EasyMock.createMock(GenerateDocumentDataBlockServiceImpl.class);
         MOCK_INPUT_STREAM = new ByteArrayInputStream("Head".getBytes());
 
-        EasyMock.expect(
-            mockDocMetadataService.findDocMetadataByPrimaryKey(
-            		titleId, new Long(12345), "Iff49dfd67c8f11da9de6e47d6d5aa7a5"))
-                .andReturn(mockDocMetadata);
+        EasyMock
+            .expect(
+                mockDocMetadataService
+                    .findDocMetadataByPrimaryKey(titleId, Long.valueOf(12345), "Iff49dfd67c8f11da9de6e47d6d5aa7a5"))
+            .andReturn(mockDocMetadata);
 
         EasyMock.expect(mockDocMetadata.getCollectionName()).andReturn(MOCK_COLLECTION).times(2);
         EasyMock.expect(mockDocMetadata.getDocType()).andReturn(MOCK_DOCTYPE);
-        EasyMock.expect(mocGenerateDocumentDataBlockService.getDocumentDataBlockAsStream(titleId, new Long(12345), "Iff49dfd67c8f11da9de6e47d6d5aa7a5"))
-        .andReturn(MOCK_INPUT_STREAM);
+        EasyMock
+            .expect(
+                mocGenerateDocumentDataBlockService
+                    .getDocumentDataBlockAsStream(titleId, Long.valueOf(12345), "Iff49dfd67c8f11da9de6e47d6d5aa7a5"))
+            .andReturn(MOCK_INPUT_STREAM);
         EasyMock.replay(mockDocMetadataService);
         EasyMock.replay(mockDocMetadata);
 
@@ -124,409 +118,421 @@ public class PersistentUrlTransformIntegrationTests
         jobId = 12345L;
     }
 
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testCiteQueryAdapterLinksUsingCodesStatutesStylesheet()
-        throws Exception
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testCiteQueryAdapterLinksUsingCodesStatutesStylesheet() throws Exception
     {
-        String renderedOutput = getWestLawNextRenderedOutput("Iff49dfd67c8f11da9de6e47d6d5aa7a5");
+        final String renderedOutput = getWestLawNextRenderedOutput("Iff49dfd67c8f11da9de6e47d6d5aa7a5");
 
         int result = buildUrlsFromString(renderedOutput, DOCUMENT_HEAD_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + DOCUMENT_HEAD_XPATH_EXPR + "  in prerendered output  "
-            + renderedOutput);
+            "Unable to find Url location " + DOCUMENT_HEAD_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
 
         result = buildUrlsFromFile(WEST_LAW_RENDERED_XML, DOCUMENT_HEAD_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + DOCUMENT_HEAD_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
+            "Unable to find Url location "
+                + DOCUMENT_HEAD_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
     }
 
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN1E6B9EE08D7111D8A8ACD145B11214D7ContentBlock()
-        throws Exception
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN1E6B9EE08D7111D8A8ACD145B11214D7ContentBlock() throws Exception
     {
-        String renderedOutput = getWestLawNextRenderedOutput("N1E6B9EE08D7111D8A8ACD145B11214D7");
+        final String renderedOutput = getWestLawNextRenderedOutput("N1E6B9EE08D7111D8A8ACD145B11214D7");
 
         int result = buildUrlsFromString(renderedOutput, CONTENT_BLOCK_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  "
-            + renderedOutput);
+            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
 
-        result = buildUrlsFromFile(
-                "N1E6B9EE08D7111D8A8ACD145B11214D7_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
+        result = buildUrlsFromFile("N1E6B9EE08D7111D8A8ACD145B11214D7_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
 
-         Assert.isTrue(
+        Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
+            "Unable to find Url location "
+                + CONTENT_BLOCK_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
     }
 
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN1E6B9EE08D7111D8A8ACD145B11214D7ParagraphText()
-        throws Exception
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN1E6B9EE08D7111D8A8ACD145B11214D7ParagraphText() throws Exception
     {
-        String renderedOutput = getWestLawNextRenderedOutput("N1E6B9EE08D7111D8A8ACD145B11214D7");
+        final String renderedOutput = getWestLawNextRenderedOutput("N1E6B9EE08D7111D8A8ACD145B11214D7");
 
         int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in prerendered output  " + renderedOutput);
+            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
 
-        result = buildUrlsFromFile(
-                "N1E6B9EE08D7111D8A8ACD145B11214D7_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
+        result = buildUrlsFromFile("N1E6B9EE08D7111D8A8ACD145B11214D7_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
+            "Unable to find Url location "
+                + PARAGRAPH_TEXT_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
     }
 
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN1E6B9EE08D7111D8A8ACD145B11214D7PrelimGoldenLeaf()
-        throws Exception
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN1E6B9EE08D7111D8A8ACD145B11214D7PrelimGoldenLeaf() throws Exception
     {
-        String renderedOutput = getWestLawNextRenderedOutput("N1E6B9EE08D7111D8A8ACD145B11214D7");
+        final String renderedOutput = getWestLawNextRenderedOutput("N1E6B9EE08D7111D8A8ACD145B11214D7");
 
         System.out.println("Output is " + renderedOutput);
         int result = buildUrlsFromString(renderedOutput, PRELIMGOLDENLEAF_XPATH_EXPR_3);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in prerendered output  " + renderedOutput);
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in prerendered output  "
+                + renderedOutput);
 
-        result = buildUrlsFromFile(
-                "N1E6B9EE08D7111D8A8ACD145B11214D7_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN2129FB908D7111D8A8ACD145B11214D71ParagraphText()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
-
-        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
+        result =
+            buildUrlsFromFile("N1E6B9EE08D7111D8A8ACD145B11214D7_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in prerendered output  " + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "N2129FB908D7111D8A8ACD145B11214D7_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN2129FB908D7111D8A8ACD145B11214D7ContentBlock()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
-
-        int result = buildUrlsFromString(renderedOutput, CONTENT_BLOCK_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  "
-            + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "N2129FB908D7111D8A8ACD145B11214D7_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN2129FB908D7111D8A8ACD145B11214D7PrelimGoldenLeaf()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
-
-        int result = buildUrlsFromString(renderedOutput, PRELIMGOLDENLEAF_XPATH_EXPR_3);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in prerendered output  " + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "N2129FB908D7111D8A8ACD145B11214D7_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-   
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN5AE4A3C0D2A311DFA872E294CFCC8A91ContentBlock()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("N5AE4A3C0D2A311DFA872E294CFCC8A91");
-
-        int result = buildUrlsFromString(renderedOutput, CONTENT_BLOCK_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  "
-            + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "N5AE4A3C0D2A311DFA872E294CFCC8A91_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN5AE4A3C0D2A311DFA872E294CFCC8A91ParagraphText()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("N5AE4A3C0D2A311DFA872E294CFCC8A91");
-
-        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in prerendered output  " + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "N5AE4A3C0D2A311DFA872E294CFCC8A91_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN5AE4A3C0D2A311DFA872E294CFCC8A91PrelimGoldenLeaf()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("N5AE4A3C0D2A311DFA872E294CFCC8A91");
-
-        int result = buildUrlsFromString(renderedOutput, PRELIMGOLDENLEAF_XPATH_EXPR_3);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in prerendered output  " + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "N5AE4A3C0D2A311DFA872E294CFCC8A91_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testN98740E607CC011DC8B69829BAAB1B5B5ParagraphText()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
-
-        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in prerendered output  " + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "N98740E607CC011DC8B69829BAAB1B5B5_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-  
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testNB915D0707CBD11DC8EE4814D1B0549C2ContentBlock()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("NB915D0707CBD11DC8EE4814D1B0549C2");
-
-        int result = buildUrlsFromString(renderedOutput, CONTENT_BLOCK_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  "
-            + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "NB915D0707CBD11DC8EE4814D1B0549C2_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testNB915D0707CBD11DC8EE4814D1B0549C2ParagraphText()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("NB915D0707CBD11DC8EE4814D1B0549C2");
-
-        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in prerendered output  " + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "NB915D0707CBD11DC8EE4814D1B0549C2_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
-    }
-
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testNB915D0707CBD11DC8EE4814D1B0549C2PrelimGoldenLeaf()
-        throws Exception
-    {
-        String renderedOutput = getWestLawNextRenderedOutput("NB915D0707CBD11DC8EE4814D1B0549C2");
-
-        int result = buildUrlsFromString(renderedOutput, PRELIMGOLDENLEAF_XPATH_EXPR_3);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in prerendered output  " + renderedOutput);
-
-        result = buildUrlsFromFile(
-                "NB915D0707CBD11DC8EE4814D1B0549C2_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
-
-        Assert.isTrue(
-            result != 0,
-            "Unable to find Url location " + PRELIMGOLDENLEAF_XPATH_EXPR_3
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
     }
 
     @Test
-    public void testUrlBuilderAdapterForKeyciteFlagUrl()
-        throws Exception
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN2129FB908D7111D8A8ACD145B11214D71ParagraphText() throws Exception
     {
-        String inputXmlFragment = "<keyCiteFlagLink.Url docGuid=\"DOC_GUID\"/>";
-        StreamSource inputSource =
-            new StreamSource(new ByteArrayInputStream(inputXmlFragment.getBytes("UTF-8")));
+        final String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
 
-        Source xsltSource =
-            new StreamSource(
-        "/apps/ebookbuilder/staticContent/WestlawNext/DefaultProductView/ContentTypes/" + CODES_STATUTES_XSLT);
+        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
 
-        TransformerFactory transFact = TransformerFactory.newInstance();
-        XSLIncludeResolver resolver = new XSLIncludeResolver();
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
+
+        result = buildUrlsFromFile("N2129FB908D7111D8A8ACD145B11214D7_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PARAGRAPH_TEXT_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN2129FB908D7111D8A8ACD145B11214D7ContentBlock() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
+
+        int result = buildUrlsFromString(renderedOutput, CONTENT_BLOCK_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
+
+        result = buildUrlsFromFile("N2129FB908D7111D8A8ACD145B11214D7_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + CONTENT_BLOCK_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN2129FB908D7111D8A8ACD145B11214D7PrelimGoldenLeaf() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
+
+        int result = buildUrlsFromString(renderedOutput, PRELIMGOLDENLEAF_XPATH_EXPR_3);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in prerendered output  "
+                + renderedOutput);
+
+        result =
+            buildUrlsFromFile("N2129FB908D7111D8A8ACD145B11214D7_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN5AE4A3C0D2A311DFA872E294CFCC8A91ContentBlock() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("N5AE4A3C0D2A311DFA872E294CFCC8A91");
+
+        int result = buildUrlsFromString(renderedOutput, CONTENT_BLOCK_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
+
+        result = buildUrlsFromFile("N5AE4A3C0D2A311DFA872E294CFCC8A91_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + CONTENT_BLOCK_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN5AE4A3C0D2A311DFA872E294CFCC8A91ParagraphText() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("N5AE4A3C0D2A311DFA872E294CFCC8A91");
+
+        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
+
+        result = buildUrlsFromFile("N5AE4A3C0D2A311DFA872E294CFCC8A91_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PARAGRAPH_TEXT_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN5AE4A3C0D2A311DFA872E294CFCC8A91PrelimGoldenLeaf() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("N5AE4A3C0D2A311DFA872E294CFCC8A91");
+
+        int result = buildUrlsFromString(renderedOutput, PRELIMGOLDENLEAF_XPATH_EXPR_3);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in prerendered output  "
+                + renderedOutput);
+
+        result =
+            buildUrlsFromFile("N5AE4A3C0D2A311DFA872E294CFCC8A91_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testN98740E607CC011DC8B69829BAAB1B5B5ParagraphText() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("N2129FB908D7111D8A8ACD145B11214D7");
+
+        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
+
+        result = buildUrlsFromFile("N98740E607CC011DC8B69829BAAB1B5B5_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PARAGRAPH_TEXT_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testNB915D0707CBD11DC8EE4814D1B0549C2ContentBlock() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("NB915D0707CBD11DC8EE4814D1B0549C2");
+
+        int result = buildUrlsFromString(renderedOutput, CONTENT_BLOCK_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location " + CONTENT_BLOCK_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
+
+        result = buildUrlsFromFile("NB915D0707CBD11DC8EE4814D1B0549C2_expected_wln.html", CONTENT_BLOCK_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + CONTENT_BLOCK_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testNB915D0707CBD11DC8EE4814D1B0549C2ParagraphText() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("NB915D0707CBD11DC8EE4814D1B0549C2");
+
+        int result = buildUrlsFromString(renderedOutput, PARAGRAPH_TEXT_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location " + PARAGRAPH_TEXT_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
+
+        result = buildUrlsFromFile("NB915D0707CBD11DC8EE4814D1B0549C2_expected_wln.html", PARAGRAPH_TEXT_XPATH_EXPR);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PARAGRAPH_TEXT_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testNB915D0707CBD11DC8EE4814D1B0549C2PrelimGoldenLeaf() throws Exception
+    {
+        final String renderedOutput = getWestLawNextRenderedOutput("NB915D0707CBD11DC8EE4814D1B0549C2");
+
+        int result = buildUrlsFromString(renderedOutput, PRELIMGOLDENLEAF_XPATH_EXPR_3);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in prerendered output  "
+                + renderedOutput);
+
+        result =
+            buildUrlsFromFile("NB915D0707CBD11DC8EE4814D1B0549C2_expected_wln.html", PRELIMGOLDENLEAF_XPATH_EXPR_3);
+
+        Assert.isTrue(
+            result != 0,
+            "Unable to find Url location "
+                + PRELIMGOLDENLEAF_XPATH_EXPR_3
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
+    }
+
+    @Test
+    @Ignore
+    public void testUrlBuilderAdapterForKeyciteFlagUrl() throws Exception
+    {
+        final String inputXmlFragment = "<keyCiteFlagLink.Url docGuid=\"DOC_GUID\"/>";
+        final StreamSource inputSource = new StreamSource(new ByteArrayInputStream(inputXmlFragment.getBytes("UTF-8")));
+
+        final Source xsltSource = new StreamSource(
+            "/apps/ebookbuilder/staticContent/WestlawNext/DefaultProductView/ContentTypes/" + CODES_STATUTES_XSLT);
+
+        final TransformerFactory transFact = TransformerFactory.newInstance();
+        final XSLIncludeResolver resolver = new XSLIncludeResolver();
         transFact.setURIResolver(resolver);
 
-        Transformer trans = transFact.newTransformer(xsltSource);
+        final Transformer trans = transFact.newTransformer(xsltSource);
         trans.setOutputProperty(OutputKeys.ENCODING, "UTF-8");
 
-        Result result = new StreamResult(System.out);
+        final Result result = new StreamResult(System.out);
 
         trans.transform(inputSource, result);
     }
 
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testUrlBuilderAdapterLinksUsingPdfImageHref()
-        throws Exception
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testUrlBuilderAdapterLinksUsingPdfImageHref() throws Exception
     {
-        String renderedOutput = getWestLawNextRenderedOutput(PRE_RENDERED_GUID);
+        final String renderedOutput = getWestLawNextRenderedOutput(PRE_RENDERED_GUID);
         System.out.println("Chinana" + renderedOutput);
 
         int result = buildUrlsFromString(renderedOutput, DOCUMENT_HEAD_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + DOCUMENT_HEAD_XPATH_EXPR + "  in prerendered output  "
-            + renderedOutput);
+            "Unable to find Url location " + DOCUMENT_HEAD_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
 
         result = buildUrlsFromFile(WEST_LAW_RENDERED_XML, DOCUMENT_HEAD_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + DOCUMENT_HEAD_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
+            "Unable to find Url location "
+                + DOCUMENT_HEAD_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
     }
 
-    @Test @Ignore //ignored due to 30+ second runtime (and broken)
-    public void testUrlBuilderAdapterLinksUsingPdfImageMetadata()
-        throws Exception
+    @Test
+    @Ignore //ignored due to 30+ second runtime (and broken)
+    public void testUrlBuilderAdapterLinksUsingPdfImageMetadata() throws Exception
     {
-        String renderedOutput = getWestLawNextRenderedOutput(PRE_RENDERED_GUID);
+        final String renderedOutput = getWestLawNextRenderedOutput(PRE_RENDERED_GUID);
 
         int result = buildUrlsFromString(renderedOutput, IMAGEBLOCK_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + IMAGEBLOCK_XPATH_EXPR + "  in prerendered output  "
-            + renderedOutput);
+            "Unable to find Url location " + IMAGEBLOCK_XPATH_EXPR + "  in prerendered output  " + renderedOutput);
 
         result = buildUrlsFromFile(WEST_LAW_RENDERED_XML, IMAGEBLOCK_WEST_LAW_XPATH_EXPR);
 
         Assert.isTrue(
             result != 0,
-            "Unable to find Url location " + IMAGEBLOCK_WEST_LAW_XPATH_EXPR
-            + "  in West_Law_rendered xml  " + WEST_LAW_RENDERED_XML);
+            "Unable to find Url location "
+                + IMAGEBLOCK_WEST_LAW_XPATH_EXPR
+                + "  in West_Law_rendered xml  "
+                + WEST_LAW_RENDERED_XML);
     }
-
-  
 
     private int buildUrlsFromFile(final String xmlFile, final String xpathString)
     {
-        File expectedWlnOutput =
-            new File(PersistentUrlTransformIntegrationTests.class.getResource(xmlFile).getFile());
+        final File expectedWlnOutput = new File(PersistentUrlTransformIntegrationTests.class.getResource(xmlFile).getFile());
 
-        DocumentBuilderFactory domFactory = DocumentBuilderFactory.newInstance();
-        domFactory.setNamespaceAware(true);    
+        final DocumentBuilderFactory domFactory = DocumentBuilderFactory.newInstance();
+        domFactory.setNamespaceAware(true);
 
-        DocumentBuilder builder;
+        final DocumentBuilder builder;
         NodeList nodes = null;
 
         try
         {
             builder = domFactory.newDocumentBuilder();
 
-            Document doc = builder.parse(expectedWlnOutput);
+            final Document doc = builder.parse(expectedWlnOutput);
 
-            XPathFactory factory = XPathFactory.newInstance();
-            XPath xpath = factory.newXPath();
-            XPathExpression expr = xpath.compile(xpathString);
-            Object result = expr.evaluate(doc, XPathConstants.NODESET);
+            final XPathFactory factory = XPathFactory.newInstance();
+            final XPath xpath = factory.newXPath();
+            final XPathExpression expr = xpath.compile(xpathString);
+            final Object result = expr.evaluate(doc, XPathConstants.NODESET);
             nodes = (NodeList) result;
         }
-        catch (Exception e)
+        catch (final Exception e)
         {
             e.printStackTrace();
         }
@@ -536,85 +542,84 @@ public class PersistentUrlTransformIntegrationTests
 
     private int buildUrlsFromString(final String str, final String xpathExpression)
     {
-        DocumentBuilderFactory domFactory = DocumentBuilderFactory.newInstance();
+        final DocumentBuilderFactory domFactory = DocumentBuilderFactory.newInstance();
         domFactory.setNamespaceAware(true);
 
-        DocumentBuilder builder;
+        final DocumentBuilder builder;
         NodeList nodes = null;
 
         try
         {
             builder = domFactory.newDocumentBuilder();
 
-            Document doc = builder.parse(new ByteArrayInputStream(str.getBytes("UTF-8")));
+            final Document doc = builder.parse(new ByteArrayInputStream(str.getBytes("UTF-8")));
 
-            XPathFactory factory = XPathFactory.newInstance();
-            XPath xpath = factory.newXPath();
-            XPathExpression expr = xpath.compile(xpathExpression);
-            Object result = expr.evaluate(doc, XPathConstants.NODESET);
+            final XPathFactory factory = XPathFactory.newInstance();
+            final XPath xpath = factory.newXPath();
+            final XPathExpression expr = xpath.compile(xpathExpression);
+            final Object result = expr.evaluate(doc, XPathConstants.NODESET);
             nodes = (NodeList) result;
         }
-        catch (Exception e)
+        catch (final Exception e)
         {
             e.printStackTrace();
-        }
-
-        for (int i = 0; i < nodes.getLength(); i++)
-        {
         }
 
         return nodes.getLength();
     }
 
-    private String getWestLawNextRenderedOutput(String preRenderedInput)
+    private String getWestLawNextRenderedOutput(final String preRenderedInput)
         throws EBookFormatException, FileNotFoundException, IOException
     {
         novusXmlFilename = preRenderedInput + ".xml";
 
         mockDocMetadataService = EasyMock.createMock(DocMetadataService.class);
 
-        EasyMock.expect(
-            mockDocMetadataService.findDocMetadataByPrimaryKey(
-            		titleId, new Long(12345), preRenderedInput)).andReturn(mockDocMetadata);
+        EasyMock.expect(mockDocMetadataService.findDocMetadataByPrimaryKey(titleId, Long.valueOf(12345), preRenderedInput))
+            .andReturn(mockDocMetadata);
 
         EasyMock.replay(mockDocMetadataService);
         MOCK_INPUT_STREAM = new ByteArrayInputStream("Head".getBytes());
 
-        EasyMock.expect(mocGenerateDocumentDataBlockService.getDocumentDataBlockAsStream(titleId, new Long(12345), preRenderedInput))
-        .andReturn(MOCK_INPUT_STREAM);
+        EasyMock
+            .expect(
+                mocGenerateDocumentDataBlockService
+                    .getDocumentDataBlockAsStream(titleId, Long.valueOf(12345), preRenderedInput))
+            .andReturn(MOCK_INPUT_STREAM);
         transformerService.setdocMetadataService(mockDocMetadataService);
         transformerService.setGenerateDocumentDataBlockService(mocGenerateDocumentDataBlockService);
         EasyMock.replay(mocGenerateDocumentDataBlockService);
 
-        File novusXml =
-            new File(
-                PersistentUrlTransformIntegrationTests.class.getResource(novusXmlFilename).getFile());
-        File transformedDirectory = tempDirectory.newFolder("transformed");
+        final File novusXml = new File(PersistentUrlTransformIntegrationTests.class.getResource(novusXmlFilename).getFile());
+        final File transformedDirectory = tempDirectory.newFolder("transformed");
 
         transformerService.setfileHandlingHelper(getFileHandlingHelper(novusXmlFilename.toLowerCase()));
         transformerService.transformXMLDocuments(
-        		novusXml.getParentFile(), novusXml.getParentFile(), novusXml.getParentFile(), transformedDirectory, 
-        		jobId, bookDefinition, new File(staticContentDir));
-        
+            novusXml.getParentFile(),
+            novusXml.getParentFile(),
+            novusXml.getParentFile(),
+            transformedDirectory,
+            jobId,
+            bookDefinition,
+            new File(staticContentDir));
+
         verifyAll();
 
-        String renderedOutput =
-            IOUtils.toString(
-                new FileInputStream(
-                    new File(transformedDirectory, preRenderedInput + ".TRANSFORMED")));
+        final String renderedOutput =
+            IOUtils.toString(new FileInputStream(new File(transformedDirectory, preRenderedInput + ".TRANSFORMED")));
 
         return renderedOutput;
     }
 
-	private FileHandlingHelper getFileHandlingHelper(String novusXmlFilename) {
-		FileHandlingHelper fileHandlingHelper = new FileHandlingHelper();
-        FileExtensionFilter fileExtensionFilter = new FileExtensionFilter();
-        fileExtensionFilter.setAcceptedFileExtensions(new String[]{novusXmlFilename});
+    private FileHandlingHelper getFileHandlingHelper(final String novusXmlFilename)
+    {
+        final FileHandlingHelper fileHandlingHelper = new FileHandlingHelper();
+        final FileExtensionFilter fileExtensionFilter = new FileExtensionFilter();
+        fileExtensionFilter.setAcceptedFileExtensions(new String[] {novusXmlFilename});
         fileHandlingHelper.setFilter(fileExtensionFilter);
-		return fileHandlingHelper;
-	}
+        return fileHandlingHelper;
+    }
 
-   
     private void verifyAll()
     {
         EasyMock.verify(mockDocMetadataService);
